# crop-advisor-env

./: DEPLOY_GUIDE.md  Dockerfile  HF_README.md  README.md  TEST_APPROACHES.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
crop_advisor_env/: .dockerignore  __init__.py  client.py  models.py
crop_advisor_env/server/: Dockerfile  __init__.py  app.py  crop_environment.py  crop_simulator.py  grader.py  inference.py  weather_engine.py
server/: app.py
